# nexus

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/: setup.html  setup.js  splashscreen.html
src/: App.tsx  index.css  main.tsx  setup-entry.tsx  setup.html  splashscreen.html  types.ts
src-tauri/: 2  Cargo.toml  FileAssociation.nsh  installer.nsh  license.txt  tauri.conf.json  template.nsi  utils.nsh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: arduino.rs  commands.rs  database.rs  errordefs.rs  logging.rs  main.rs  reports.rs  serial_monitor.rs  settings.rs  setup.rs  types.rs  user.rs
src/common/: setupOptions.ts
src/components/: AutoUpdater.tsx  Modal.tsx  SaveDataModal.css  Sidebar.tsx
src/context/: DoctorContext.tsx
src/hooks/: useArduinoWatcher.ts
src/pages/: Analytics.css  Analytics.tsx  Arduino.css  Dashboard.css  Dashboard.tsx  DashboardTest.css  DeviceDetail.css  DeviceDetail.tsx  GraphPage.tsx  Logs.tsx  PatientList.css  PatientList.tsx  PatientTestDashboard.tsx  Settings.css  Settings.tsx  Setup.tsx  SetupWizard.css  SetupWizard.tsx  admissions_search.css  arduino_customization.tsx
src/store/: arduinoSlice.ts  index.ts  settingsSlice.ts
src/types/: canvasjs-react-charts.d.ts
